# openmem

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  QUICKSTART.md  README.md  USAGE.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  setup.py  storage_sqlite.py
.github/workflows/: pypi.yml
.poetry-cache/artifacts/ca/74/f4/09b215bc47480124f1be49ae69b1c7e5eff7bbce5b5793686c6fa69822/: sqlite_vec-0.1.6-py3-none-win_amd64.whl
.trae/documents/: openmem-upgrade-v0.1.3-plan.md
.trae/specs/fix-v0.1.4-critical/: checklist.md  spec.md  tasks.md
cli/: __init__.py  main.py
core/: __init__.py  config.py  manager.py
features/: __init__.py  encryption.py  ide_rules.py  llm.py  organizer.py  search.py  trigger.py  trigger_action.py  version.py
openmem/cli/: main.py
openmem/core/: __init__.py  errors.py  logger.py  manager.py  metrics.py  session.py
openmem/features/: __init__.py  context_injection.py  search.py  vector_search.py  version.py
openmem/storage/: __init__.py  exceptions.py  orm.py  orm_storage.py  sqlite.py  unified.py
skills/openmem-skill/: SKILL.md  skill.yaml
storage/: __init__.py  base.py  sqlite.py  unified.py
tests/: test_config.py  test_critical_v014.py  test_manager.py  test_security.py
